# N-Dim-DS

./: .gitignore  .pre-commit-config.yaml  README.md  dynamic_n_dim_diff_fenwick_tree.py  dynamic_n_dim_fenwick_tree.py  dynamic_n_dim_seg_tree.py  pyproject.toml  static_n_dim_difference_array.py
cpp/: CMakeLists.txt
cpp/include/ndim/: dynamic_n_dim_diff_fenwick_tree.hpp  dynamic_n_dim_fenwick_tree.hpp  dynamic_n_dim_range_fenwick_tree.hpp  dynamic_n_dim_seg_tree.hpp  static_n_dim_difference_array.hpp  static_n_dim_prefix_sum.hpp
cpp/test/: CMakeLists.txt  test_dynamic_diff_fenwick.cpp  test_dynamic_fenwick_tree.cpp  test_dynamic_range_fenwick.cpp  test_dynamic_seg_tree.cpp  test_static_difference_array.cpp  test_static_prefix_sum.cpp
python/: README.md  pyproject.toml
python/src/: __init__.py  dynamic_n_dim_diff_fenwick_tree.py  dynamic_n_dim_fenwick_tree.py  dynamic_n_dim_range_fenwick_tree.py  dynamic_n_dim_seg_tree.py
python/src/ndim_ds/: __init__.py  dynamic_n_dim_range_fenwick_tree.py  dynamic_n_dim_seg_tree.py  static_n_dim_difference_array.py  static_n_dim_prefix_sum.py
python/src/pure/: __init__.py  dynamic_n_dim_fenwick_tree.py  dynamic_n_dim_range_fenwick_tree.py  static_n_dim_prefix_sum.py
python/test/: test_dynamic_diff_fenwick.py  test_dynamic_fenwick_tree.py  test_dynamic_range_fenwick.py  test_dynamic_seg_tree.py  test_static_difference_array.py  test_static_prefix_sum.py
src/: dynamic_n_dim_diff_fenwick_tree.py  dynamic_n_dim_range_fenwick_tree.py  dynamic_n_dim_seg_tree.py  static_n_dim_difference_array.py  static_n_dim_prefix_sum.py
test/: test_dynamic_diff_fenwick.py
