[project]
name = "n-dim-data-structures"
version = "0.1.0"
description = "A collection of optimized N-dimensional data structures in Python"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []
