[project]
name = "ndim_ds"
version = "0.1.3"
description = "Highly optimized generalized N-dimensional data structures"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []
